--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "Getting Started With Hono",
+  "name": "getting-started-with-hono",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "wrangler pages dev",
-    "deploy": "yarn run build && wrangler pages deploy"
+    "deploy": "yarn run build && wrangler pages deploy",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "better-sqlite3": "^11.7.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
     "hono": "^4.6.14"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/vite-build": "^1.0.0",
     "@hono/vite-dev-server": "^0.16.0",
+    "@types/better-sqlite3": "^7.6.12",
+    "drizzle-kit": "^0.30.1",
+    "tsx": "^4.19.2",
     "vite": "^5.2.12",
     "wrangler": "^3.57.2"
   }
