--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "yarn run build && wrangler pages deploy",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "studio": "npx drizzle-kit studio"
+    "studio": "npx drizzle-kit studio",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "better-sqlite3": "^11.7.0",
@@ -20,8 +22,17 @@
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/vite-build": "^1.0.0",
     "@hono/vite-dev-server": "^0.16.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/jest": "^29.5.14",
+    "@types/sinon": "^17.0.3",
     "drizzle-kit": "^0.30.1",
+    "jest": "^29.7.0",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "vite": "^5.2.12",
     "wrangler": "^3.57.2"
