--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "argon2": "^0.41.1",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
-    "hono": "^4.6.14"
+    "hono": "^4.6.14",
+    "install": "^0.13.0",
+    "npm": "^11.1.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
@@ -24,6 +27,7 @@
     "@hono/vite-dev-server": "^0.16.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.12",
     "@types/jest": "^29.5.14",
     "@types/sinon": "^17.0.3",
